getting an error because of utf-8, but it is major surgery, so checkpointing also, got page template going, got page variables going, etc

--- a/talktestpage.html
+++ b/talktestpage.html
@@ -1,97 +1,21 @@
+<!DOCTYPE html>
 <html>
 <head>
-	<style>
-		@import url('https://fonts.googleapis.com/css?family=Encode+Sans+Expanded:300,400,600');
-		body {	background-color: white;
-				font-family: 'Encode Sans Expanded', sans-serif;
-				margin: 20px;
-			 }
-		#talktitle {
-			font-size: 300%;
-			margin-bottom: 20px;
-		}
-		#photo {
-			margin-bottom: 20px;
-		}
-		.photocaption {
-			font-weight: 300;
-		}
-		#photo img {
-/*			width: 560px;
-			height: 258px;*/
-			width: 100%;
-			max-width: 960px;
-		}
-		#description {
-			margin-bottom: 20px;
-			max-width: 960px;
-		}
-		#reactions {
-			max-width: 960px;
-		}
-		.subheader {
-			font-size: 200%;
-		}
-		#video {
-			margin-bottom: 20px;
-		}
-		#othervideos .subheader {
-			font-size: 100%;
-			display: inline;
-		}
-		#othervideos ul {
-		  display: inline;
-		  list-style: none;
-		  margin-left: 5px;
-		  padding-left: 0px;
-		}
-		#othervideos li {
-		  display: inline;
-		}
-		#othervideos li:after {
-		  content: ", ";
-		}
-		#othervideos li:last-child:after {
-    		content: "";
-		}
-		#slides {
-			margin-bottom:20px;
-		}
-		#presentations ul {
-			list-style: none;
-			padding-left: 5px;
-		}
-		#presentations li {
-			margin-bottom: .3em;
-		}
-		.conferencename {
-			font-weight:600;
-		}
-		.conferencedate {
-			font-style: italic;
-		}
-		#reactions ul {
-			list-style: none;
-			padding-left: 5px;
-		}
-		#reactions li {
-			margin-bottom: .5em;
-		}
-		#reactions .quote {
-			font-style: italic;
-		}
-	</style>
+    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Fail Safe, Fail Smart, Succeed</title>
+    <meta name="description" content="Page describing the talk Fail Safe, Fail Smart, Succeed by Kevin Goldsmith">
+    <meta name="author" content="Kevin Goldsmith">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="google-site-verification" content="6-e5GrTPsmDpSGk6vICFdLGxj9buwsS1qiaxZKKj3Qw" />
+
+    <!-- Google ownership links -->
+    <link rel="author" href="https://plus.google.com/+KevinGoldsmith"/>
+    <link rel="publisher" href="https://plus.google.com/111904464094073716491" />
+
+	<link rel="stylesheet" href="talkpages.css" />
 </head>
-<!---
-	Photo
-	Title
-	description
-	Video (or videos?)
-	Slides
-	List of times presented
-	reactions to the talk
-	map?
--->
 <body>
 	<div id="header"></div>
 	<div id="talktitle">Fail Safe, Fail Smart, Succeed</div>
