media queries done 1st pass

--- a/resume.html
+++ b/resume.html
@@ -136,10 +136,6 @@
 		}
 
 // Small screens
-@media only screen { 
-	body { background-color: #FF0000; }
-} /* Define mobile styles */
-
 @media only screen and (max-width: 40em) {
 	header {
 		position: relative;
@@ -176,10 +172,6 @@
 } /* max-width 640px, mobile-only styles, use when QAing mobile issues */
 
 // Medium screens
-@media only screen and (min-width: 40.063em) {
-	body { background-color: #0000FF; }
-} /* min-width 641px, medium screens */
-
 @media only screen and (min-width: 40.063em) and (max-width: 64em) {
 	header {
 		padding: .5em .5em .2em .5em;
@@ -194,10 +186,6 @@
 } /* min-width 641px and max-width 1024px, use when QAing tablet-only issues */
 
 // Large screens
-@media only screen and (min-width: 64.063em) {
-	body { background-color: #00AA00; }
-} /* min-width 1025px, large screens */
-
 @media only screen and (min-width: 64.063em) and (max-width: 90em) {
 	header {
 		padding: .5em .5em .2em .5em;
@@ -213,17 +201,18 @@
 
 // XLarge screens
 @media only screen and (min-width: 90.063em) {
-	body { background-color: #CC0000; }
-} /* min-width 1441px, xlarge screens */
-
-@media only screen and (min-width: 90.063em) and (max-width: 120em) {
-	body { background-color: #00CC00; }
+	#content {
+		width: 90em;
+		padding: 5em 1em 0em .5em;
+		margin-top: 1em;
+	}
+	header {
+		padding: .5em .5em .2em .5em;
+	}
+	footer {
+		padding: 0em 0em 0em .5em;
+	}	
 } /* min-width 1441px and max-width 1920px, use when QAing xlarge screen-only issues */
-
-// XXLarge screens
-@media only screen and (min-width: 120.063em) {
-	body { background-color: #0000CC; }
-} /* min-width 1921px, xxlarge screens */
 
 
 	</style>
