--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 	<title>Kevin Goldsmith</title>
+	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<style>
 		@import url('https://fonts.googleapis.com/css?family=Cinzel|Didact+Gothic');
 		body {
@@ -21,6 +22,10 @@
 		}
 		a {
 			text-decoration: none;
+			color: #AA0000;
+		}
+		a:visited {
+			color: #AAAAAA;
 		}
 		#header {
 			margin-left: 4em;
@@ -32,13 +37,59 @@
 			margin-left: 1em;
 			float:left;
 		}
+
+		// Small screens
+		@media only screen { 
+		} /* Define mobile styles */
+
+		@media only screen and (max-width: 40em) {
+			h1 {
+				font-size: 2.5em;
+				text-align: center;
+				line-height: 100%
+			}
+			li {
+				text-align: center;
+			}
+			#header {
+				float: none;
+				margin-left: 0;
+				margin-top: 2em;
+			}
+			#menu {
+				float: none;
+				margin-top: 2em;
+				margin-left: 0em;
+			}
+		} /* max-width 640px, mobile-only styles, use when QAing mobile issues */
+
+		// Medium screens
+		@media only screen and (min-width: 40.063em) {
+		} /* min-width 641px, medium screens */
+
+		@media only screen and (min-width: 40.063em) and (max-width: 64em) {
+		} /* min-width 641px and max-width 1024px, use when QAing tablet-only issues */
+
+		// Large screens
+		@media only screen and (min-width: 64.063em) {
+		} /* min-width 1025px, large screens */
+
+		@media only screen and (min-width: 64.063em) and (max-width: 90em) {
+		} /* min-width 1025px and max-width 1440px, use when QAing large screen-only issues */
+
+		// XLarge screens
+		@media only screen and (min-width: 90.063em) {
+		} /* min-width 1441px, xlarge screens */
+
+		@media only screen and (min-width: 90.063em) {
+		} /* min-width 1441px and max-width 1920px, use when QAing xlarge screen-only issues */
 	</style>
 </head>
 <body>
 	<div id="header"><h1>Kevin<br>Goldsmith</h1></div>
 	<div id="menu">
 		<ul>
-			<li><a href="resume.html">technologist</a></li>
+			<li><a href="resume.html">technology leader</a></li>
 			<li>speaker</li>
 			<li>writer</li>
 			<li>musician</li>
