--- a/resume.html
+++ b/resume.html
@@ -136,6 +136,10 @@
 		}
 
 // Small screens
+@media only screen { 
+	body { background-color: #FF0000; }
+} /* Define mobile styles */
+
 @media only screen and (max-width: 40em) {
 	header {
 		position: relative;
@@ -172,6 +176,10 @@
 } /* max-width 640px, mobile-only styles, use when QAing mobile issues */
 
 // Medium screens
+@media only screen and (min-width: 40.063em) {
+	body { background-color: #0000FF; }
+} /* min-width 641px, medium screens */
+
 @media only screen and (min-width: 40.063em) and (max-width: 64em) {
 	header {
 		padding: .5em .5em .2em .5em;
@@ -186,6 +194,10 @@
 } /* min-width 641px and max-width 1024px, use when QAing tablet-only issues */
 
 // Large screens
+@media only screen and (min-width: 64.063em) {
+	body { background-color: #00AA00; }
+} /* min-width 1025px, large screens */
+
 @media only screen and (min-width: 64.063em) and (max-width: 90em) {
 	header {
 		padding: .5em .5em .2em .5em;
@@ -201,6 +213,10 @@
 
 // XLarge screens
 @media only screen and (min-width: 90.063em) {
+	body { background-color: #CC0000; }
+} /* min-width 1441px, xlarge screens */
+
+@media only screen and (min-width: 90.063em) {
 	#content {
 		width: 90em;
 		padding: 5em 1em 0em .5em;
@@ -209,9 +225,6 @@
 	header {
 		padding: .5em .5em .2em .5em;
 	}
-	footer {
-		padding: 0em 0em 0em .5em;
-	}	
 } /* min-width 1441px and max-width 1920px, use when QAing xlarge screen-only issues */
 
 
