styling checkpoint, linking

--- a/public/index.html
+++ b/public/index.html
@@ -90,7 +90,7 @@
 	<div id="menu">
 		<ul>
 			<li><a href="resume.html">technology leader</a></li>
-			<li>speaker</li>
+			<li><a href="talks/index.html">speaker</a></li>
 			<li>writer</li>
 			<li>musician</li>
 			<li>photographer</li>
