--- a/public/resume.html
+++ b/public/resume.html
@@ -247,7 +247,7 @@
 		<div id="site-nav">
 			<ul>
 				<li class="current-page">technology leader</li>
-				<li>speaker</li>
+				<li><a href="talks/index.html">speaker</a></li>
 				<li>writer</li>
 				<li>musician</li>
 				<li>photographer</li>
