styling, cleaning up, arranging CSS

--- a/public/resume.html
+++ b/public/resume.html
@@ -2,68 +2,11 @@
 <head>
 	<title>Kevin Goldsmith: Resume</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="css/main.css" />
 	<style>
 		/* Common header elements, move to separate file? */
-		@import url('https://fonts.googleapis.com/css?family=Cinzel|Didact+Gothic');
 		body {
-			font-family: 'Didact Gothic', sans-serif;
 			margin: 0;
-		}
-		a {
-			text-decoration: none;
-			color: #AA0000;
-		}
-		a:visited {
-			color: #AAAAAA;
-		}
-		header {
-			top: 0;
-			padding-top: .5em;
-			border-bottom-width: .1em;
-			border-bottom-style: solid;
-			width: 100%;
-			background: #FFFFFF;
-			position: fixed;
-		}
-		footer {
-			padding-top: .5em;
-			border-top-width: .1em;
-			border-top-style: solid;
-			width: 100%;
-		}
-		#name {
-			font-family: 'Cinzel', serif;
-			font-weight: 500;
-			font-size: 4em;
-			margin-bottom: 0em;
-			margin-top: 0em;
-			line-height: 80%;
-		}
-		#name a {
-			color: #000000;
-		}
-		#site-nav {
-			margin-bottom: .3em;
-		}
-		#site-nav ul {
-			list-style-type: none;
-			padding-left: 0;
-			margin-top:0;
-			margin-bottom:0;
-			margin-left:.2em;
-		}
-		#site-nav li {
-			display: inline-block;
-			padding-left: .2em;
-			padding-right: .2em;
-			padding-bottom: .1em;
-			margin-right:1em;
-			vertical-align: top;
-			text-align: right;
-		}
-		.current-page {
-			color: #DDDDDD;
-			background-color: #333333;
 		}
 		#page-nav {
 			position: fixed;
@@ -243,7 +186,7 @@
 </head>
 <body>
 	<header id="header">
-		<div id="name"><a href="index.html">Kevin Goldsmith</a></div>
+		<h1 id="name"><a href="index.html">Kevin Goldsmith</a></h1>
 		<div id="site-nav">
 			<ul>
 				<li class="current-page">technology leader</li>
