--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,9 @@
 <head>
 	<title>Kevin Goldsmith</title>
 	<meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/genericons.css" />	
 	<style>
-		@import url('https://fonts.googleapis.com/css?family=Cinzel|Didact+Gothic');
-		body {
-			font-family: 'Didact Gothic', sans-serif;
-		}
 		h1 {
 			font-family: 'Cinzel', serif;
 			font-size: 4em;
@@ -19,13 +17,6 @@
 			list-style-type: none;
 			margin: 0;
 			padding: 0;
-		}
-		a {
-			text-decoration: none;
-			color: #AA0000;
-		}
-		a:visited {
-			color: #AAAAAA;
 		}
 		#header {
 			margin-left: 4em;
